# iced-template

./: Cargo.toml
src/: main.rs
