[package]
name = "iced-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced/", branch = "master", features = ["tokio"] }
serde = "1.0.198"
serde_json = "1.0.116"
iced_aw = { version = "0.8.0", features = ["icons", "selection_list"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_derive = "1.0.200"
